Revert "add unlabeled"
This reverts commit 79a1d6c4773ad6c82e084ee4b54682f940f65a32.

--- a/.github/workflows/idl-compatibility-check.yml
+++ b/.github/workflows/idl-compatibility-check.yml
@@ -10,7 +10,7 @@ on:
       - "chains/solana/contracts/target/idl/cctp_token_pool.json"
       - "chains/solana/contracts/target/idl/fee_quoter.json"
       - "chains/solana/contracts/target/idl/rmn_remote.json"
-    types: [opened, synchronize, reopened, labeled, unlabeled]
+    types: [opened, synchronize, reopened, labeled]
 
 jobs:
   check-idl-changes:
