--- a/chains/evm/package.json
+++ b/chains/evm/package.json
@@ -38,8 +38,8 @@
     "@chainlink/contracts": "1.5.0",
     "@changesets/cli": "^2.29.7",
     "@changesets/get-github-info": "^0.6.0",
-    "@openzeppelin/contracts-4.8.3/": "npm:@openzeppelin/contracts@4.8.3",
-    "@openzeppelin/contracts-5.0.2/": "npm:@openzeppelin/contracts@5.0.2",
+    "@openzeppelin/contracts-4.8.3": "npm:@openzeppelin/contracts@4.8.3",
+    "@openzeppelin/contracts-5.0.2": "npm:@openzeppelin/contracts@5.0.2",
     "semver": "^7.7.2"
   },
   "devDependencies": {
