--- a/.github/workflows/test-deployments.yml
+++ b/.github/workflows/test-deployments.yml
@@ -13,8 +13,10 @@ jobs:
   detect_deployments_changes:
     runs-on: ubuntu-latest
     outputs:
+      run_solana_deployment: ${{ steps.filter.outputs.run_solana_deployment }}
       run_evm_deployment: ${{ steps.filter.outputs.run_evm_deployment }}
       run_deployment: ${{ steps.filter.outputs.run_deployment }}
+      run_crosschain_deployment: ${{ steps.filter.outputs.run_crosschain_deployment }}
     steps:
       - uses: actions/checkout@v4
       - name: Detect changes
@@ -28,6 +30,11 @@ jobs:
             run_evm_deployment:
               - 'chains/evm/gobindings/generated/**'
               - 'chains/evm/deployment/**'
+            run_solana_deployment:
+              - 'chains/solana/gobindings/generated/**'
+              - 'chains/solana/deployment/**'
+            run_crosschain_deployment:
+              - 'deployment-crosschain-tests/**'
 
   setup-go:
     runs-on: ubuntu-latest
@@ -55,6 +62,18 @@ jobs:
       - name: Run tests
         run: go test ./...
 
+  test-solana-deployments:
+    needs: [detect_deployments_changes, setup-go]
+    if: ${{ needs.detect_deployments_changes.outputs.run_solana_deployment == 'true' }}
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: chains/solana/deployment
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run tests
+        run: go test ./...
+
   test-deployments:
     needs: [detect_deployments_changes, setup-go]
     if: ${{ needs.detect_deployments_changes.outputs.run_deployment == 'true' }}
@@ -62,6 +81,23 @@ jobs:
     defaults:
       run:
         working-directory: deployment
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run tests
+        run: go test ./...
+
+  test-deployments-crosschain:
+    needs: [detect_deployments_changes, setup-go]
+    if: |-
+      ${{
+        needs.detect_deployments_changes.outputs.run_crosschain_deployment == 'true' ||
+        needs.detect_deployments_changes.outputs.run_evm_deployment == 'true' ||
+        needs.detect_deployments_changes.outputs.run_solana_deployment == 'true'
+      }}
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: deployment-crosschain-tests
     steps:
       - uses: actions/checkout@v4
       - name: Run tests
