add tooling as owner to chain deployments

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,3 +11,5 @@
 
 # Deployment tooling
 /deployment @smartcontractkit/ccip-tooling
+/chains/evm/deployment @smartcontractkit/ccip-tooling @smartcontractkit/ccip-onchain
+/chains/solana/deployment @smartcontractkit/ccip-tooling @smartcontractkit/ccip-onchain-solana
