Run build verified solana only with tags

--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -8,8 +8,8 @@ on:
         required: true
         type: string
   push:
-    branches:
-      - main
+    tags:
+      - 'solana-v*'
 
 jobs:
   changes:
