--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -3,8 +3,8 @@ name: Solana Verified Build
 on:
   workflow_dispatch:
     inputs:
-      sha:
-        description: 'SHA to build (can be short)'
+      tag:
+        description: 'Tag to build artifacts for'
         required: true
         type: string
   push:
@@ -43,7 +43,7 @@ jobs:
     - name: Get Long and Short SHAs
       id: get_sha
       run: |
-        FULL_SHA=$(git rev-parse ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.sha || github.sha }})
+        FULL_SHA=$(git rev-parse ${{ github.event_name == 'workflow_dispatch' && github.sha }})
         echo "short_sha=${FULL_SHA:0:12}" >> $GITHUB_OUTPUT
         echo "full_sha=$FULL_SHA" >> $GITHUB_OUTPUT
     - uses: actions/checkout@v4
@@ -73,7 +73,8 @@ jobs:
       uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag_name: solana-artifacts-localtest-${{ steps.get_sha.outputs.short_sha }}
+        tag_name: ${{ github.event.inputs.tag || github.ref_name }}
         target_commitish: ${{ steps.get_sha.outputs.full_sha }}
+        body_path: ${{ github.workspace }}/chains/solana/CHANGELOG.md
         files: |
           chains/solana/contracts/artifacts.tar.gz
