--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-          ref: ${{ github.event.inputs.tag || github.ref_name }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag || github.sha }}
           fetch-depth: 0
       - name: Detect changes
         uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
@@ -36,7 +36,6 @@ jobs:
 
   build:
     needs: [ changes ]
-    if: ${{ needs.changes.outputs.solana_changes == 'true' }}
     runs-on: ubuntu-latest-8cores-32GB
     steps:
     - uses: actions/checkout@v4
@@ -45,7 +44,7 @@ jobs:
     - name: Get Long and Short SHAs
       id: get_sha
       run: |
-        FULL_SHA=$(git rev-parse ${{ github.event_name == 'workflow_dispatch' && github.sha }})
+        FULL_SHA=$(git rev-parse ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag || github.sha }})
         echo "short_sha=${FULL_SHA:0:12}" >> $GITHUB_OUTPUT
         echo "full_sha=$FULL_SHA" >> $GITHUB_OUTPUT
     - uses: actions/checkout@v4
