--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -12,30 +12,7 @@ on:
       - 'solana-v*'
 
 jobs:
-  changes:
-    name: Detect changes
-    runs-on: ubuntu-latest
-    outputs:
-      solana_changes: ${{ steps.changes.outputs.solana_changes }}
-    steps:
-      - name: Checkout the repo
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag || github.sha }}
-          fetch-depth: 0
-      - name: Detect changes
-        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
-        id: changes
-        with:
-          list-files: "shell"
-          filters: |
-            solana_changes:
-              - 'chains/solana/**'
-              - '.github/workflows/solana*.yml'
-
   build:
-    needs: [ changes ]
     runs-on: ubuntu-latest-8cores-32GB
     steps:
     - uses: actions/checkout@v4
@@ -44,7 +21,7 @@ jobs:
     - name: Get Long and Short SHAs
       id: get_sha
       run: |
-        FULL_SHA=$(git rev-parse ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag || github.sha }})
+        FULL_SHA=$(git rev-parse ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag || github.ref_name  }})
         echo "short_sha=${FULL_SHA:0:12}" >> $GITHUB_OUTPUT
         echo "full_sha=$FULL_SHA" >> $GITHUB_OUTPUT
     - uses: actions/checkout@v4
@@ -74,7 +51,7 @@ jobs:
       uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag_name: ${{ github.event.inputs.tag || github.ref_name }}
+        tag_name: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag || github.ref_name }}
         target_commitish: ${{ steps.get_sha.outputs.full_sha }}
         body_path: ${{ github.workspace }}/chains/solana/CHANGELOG.md
         files: |
