--- a/devenv/env.toml
+++ b/devenv/env.toml
@@ -25,7 +25,7 @@ cl_nodes_funding_link = 50
 
 [[nodesets]]
   name = "don"
-  nodes = 4
+  nodes = 6
   override_mode = "each"
 
   [nodesets.db]
@@ -46,6 +46,16 @@ cl_nodes_funding_link = 50
     [nodesets.node_specs.node]
       image = "public.ecr.aws/chainlink/chainlink:2.26.0"
 
+  [[nodesets.node_specs]]
+
+    [nodesets.node_specs.node]
+      image = "public.ecr.aws/chainlink/chainlink:2.26.0"
+
+  [[nodesets.node_specs]]
+
+    [nodesets.node_specs.node]
+      image = "public.ecr.aws/chainlink/chainlink:2.26.0"
+  
   [[nodesets.node_specs]]
 
     [nodesets.node_specs.node]
