--- a/devenv/env-cl-ci.toml
+++ b/devenv/env-cl-ci.toml
@@ -1,7 +1,7 @@
 
 [[nodesets]]
   name = "don"
-  nodes = 4
+  nodes = 6
   override_mode = "each"
 
   [nodesets.db]
@@ -17,6 +17,16 @@
     [nodesets.node_specs.node]
       image = "docker.io/library/local:latest"
 
+  [[nodesets.node_specs]]
+
+    [nodesets.node_specs.node]
+      image = "docker.io/library/local:latest"
+
+  [[nodesets.node_specs]]
+
+    [nodesets.node_specs.node]
+      image = "docker.io/library/local:latest"
+  
   [[nodesets.node_specs]]
 
     [nodesets.node_specs.node]
