--- a/chains/evm/package.json
+++ b/chains/evm/package.json
@@ -47,8 +47,7 @@
     "pnpm": ">=10"
   },
   "dependencies": {
-    "@chainlink/contracts": "^1.5.0",
-    "@chainlink/contracts-ccip": "^1.6.3",
+    "@chainlink/contracts": "1.5.0",
     "@changesets/cli": "^2.29.7",
     "@changesets/get-github-info": "^0.6.0",
     "@openzeppelin/contracts-4.8.3": "npm:@openzeppelin/contracts@4.8.3",
